cmake_minimum_required(VERSION 3.27)
project(LeetCode_Solutions)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_Solutions
        array/_39CombinationSum/_39CombinationSum.cpp
        array/_40CombinationSumII/CombinationSumII.cpp
        array/_713SubarrayProductLessThanK/_713SubarrayProductLessThanK.cpp
        linkedlist/_148SortList/_148SortList.cpp
        linkedlist/_2AddTwoNumbers/AddTwoNumbers.c
        linkedlist/_2AddTwoNumbers/AddTwoNumbers.cpp
        out/production/LeetCode-Solutions/array/_39CombinationSum/_39CombinationSum.cpp
        out/production/LeetCode-Solutions/array/_40CombinationSumII/CombinationSumII.cpp
        out/production/LeetCode-Solutions/linkedlist/_148SortList/_148SortList.cpp
        out/production/LeetCode-Solutions/linkedlist/_2AddTwoNumbers/AddTwoNumbers.c
        out/production/LeetCode-Solutions/linkedlist/_2AddTwoNumbers/AddTwoNumbers.cpp
        out/production/LeetCode-Solutions/tree/_113PathSumII/c/113PathSumII.c
        out/production/LeetCode-Solutions/tree/_113PathSumII/cpp/113PathSumII.cpp
        tree/_113PathSumII/c/113PathSumII.c
        tree/_113PathSumII/cpp/113PathSumII.cpp)
